app/styles/sidebar.scss
// sidebar
.sidebar-container {
  margin-top: 35px;
}

.sidebar-logo {
  font-size: 3.5rem;
  margin-top: 15px;
  margin-bottom: 75px;
  text-align: center;
  font-family: 'Shadows Into Light', cursive;
}

.side-nav.fixed {
  overflow: hidden;

  .list-item {
    line-height: 44px;

    &.active {
      background-color: rgba(0,0,0,.05);
    }
  }

  // Only show scrollbar on hover
  &:hover {
    overflow-y: auto;
  }
}

#logo-container {
  height: 57px;
  margin-bottom: 70px;
}

.sidebar-logo:hover {
  // disable text highlighter cursor
  cursor: default;
  // disable text select
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select:none;
  -ms-user-select:none;
}

.bold {
  font-weight: bold;
}

// search
.search {
  &:hover { background-color: #fff; }

  position: absolute;
  left: 0;
  right: 0;
  top: 80px;
  margin-top: 15px;
  padding: 1px 0 0;
  z-index: 2;

  .search-wrapper {
    &.focused { margin: 0; }

    margin: 0 12px;
    transition: margin .25s ease;

    input#search {
      &:focus { outline: none; }

      display: block;
      font-size: 16px;
      font-weight: 300;
      width: 100%;
      height: 45px;
      margin: 0;
      padding: 0 45px 0 15px;
      border: 0;
    }

    .material-icons {
      position: absolute;
      top: 10px;
      right: 10px;
      cursor: pointer;
    }
  }

  .search-results {
    margin: 0;
    border-top: 1px solid #e9e9e9;
    background-color: #fff;

    .search-result {
      &:hover,
      &.focused {
        background-color: #eee;
        outline: none;
      }

      font-size: 12px;
      white-space: nowrap;
    }
  }
}

